--- a/SpainCosplay3/app/src/main/res/values/strings.xml
+++ b/SpainCosplay3/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="string_acercade">Acerca de</string>
+    <string name="login">Iniciar sesión</string>
+    <string name="register">Registrar...</string>
 </resources>
