--- a/SpainCosplay3/app/src/main/res/values/strings.xml
+++ b/SpainCosplay3/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="string_acercade">Acerca de</string>
     <string name="login">Iniciar sesión</string>
-    <string name="register">Registrar...</string>
+    <string name="register">Registrar.</string>
+    <string name="registroN">Nuevo Usuario</string>
 </resources>
