Faltaba por comitir

--- a/SpainCosplay3/app/src/main/res/values/strings.xml
+++ b/SpainCosplay3/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="eventosBtn">Informacion Eventos</string>
     <string name="ajustesBtn">Ajustes</string>
     <string name="salirBtn">Salir</string>
+    <string name="cerrarSesion">Cerrar Sesion</string>
 </resources>
