Ya queda poco !!!!
Hay que reparar el fallo de la carga de los eventos personales

--- a/SpainCosplay3/app/src/main/res/values/strings.xml
+++ b/SpainCosplay3/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="ajustesBtn">Ajustes</string>
     <string name="salirBtn">Salir</string>
     <string name="cerrarSesion">Cerrar Sesion</string>
+    <string name="cartelEvento">Imagen Cartel</string>
 </resources>
