--- a/SpainCosplay3/app/src/main/res/values-es/strings.xml
+++ b/SpainCosplay3/app/src/main/res/values-es/strings.xml
@@ -3,15 +3,15 @@
     <string name="app_email">spaincosplay@coterodev.esy.es</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="acercade">About</string>
+    <string name="acercade">Acerca de</string>
     <string name="login">Iniciar sesión</string>
     <string name="register">Registrar</string>
     <string name="registroN">Nuevo Usuario</string>
-    <string name="eventosBtn">Information Events</string>
-    <string name="ajustesBtn">Settings</string>
-    <string name="salirBtn">Exit</string>
+    <string name="eventosBtn">Informacion Eventos</string>
+    <string name="ajustesBtn">Ajustes</string>
+    <string name="salirBtn">Salir</string>
     <string name="cerrarSesion">Cerrar Sesion</string>
     <string name="cartelEvento">Imagen Cartel</string>
-    <string name="proximos">Upcoming Events</string>
-    <string name="cargando">Loading Events... (屮◉◞益◟◉)屮</string>
+    <string name="proximos">Proximos Eventos</string>
+    <string name="cargando">Cargando Eventos... (屮◉◞益◟◉)屮 </string>
 </resources>
