--- a/SpainCosplay3/app/src/main/res/values-es/strings.xml
+++ b/SpainCosplay3/app/src/main/res/values-es/strings.xml
@@ -14,4 +14,5 @@
     <string name="cartelEvento">Imagen Cartel</string>
     <string name="proximos">Proximos Eventos</string>
     <string name="cargando">Cargando Eventos... (屮◉◞益◟◉)屮 </string>
+    <string name="order">Fecha mas cercana</string>
 </resources>
