--- a/SpainCosplay3/app/src/main/res/values-es/strings.xml
+++ b/SpainCosplay3/app/src/main/res/values-es/strings.xml
@@ -15,4 +15,5 @@
     <string name="proximos">Proximos Eventos</string>
     <string name="cargando">Cargando Eventos... (屮◉◞益◟◉)屮 </string>
     <string name="order">Fecha mas cercana</string>
+    <string name="section_format">Estamos en pruebas, Seccion: %1$d</string>
 </resources>
