--- a/SpainCosplay3/app/src/main/res/values-ja/strings.xml
+++ b/SpainCosplay3/app/src/main/res/values-ja/strings.xml
@@ -15,4 +15,5 @@
     <string name="proximos">今後のイベント</string>
     <string name="cargando">ローディング... (屮◉◞益◟◉)屮</string>
     <string name="order">日付</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
