--- a/SpainCosplay3/app/src/main/res/values/strings.xml
+++ b/SpainCosplay3/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="cargando">Loading Events... (屮◉◞益◟◉)屮</string>
     <string name="order">Closest date</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="facebook_app_id">1051235838231573</string>
+
 </resources>
