Añadiendo cositas neuvas
Es sabado lelvas una mala semana con el dolor en el pecho pero bueno tu
tranquilo que todo ira bien, o eso creo, espero que algun dia alguien
lea esto y sepoa como me senti, respecto a lo que nos cierne, he añadido
un par de cosas un combobox(spinner en android) para lanzar las los
distintos listados y tambien integrare un buscador, poco a poco va
quedando mas guapo, en el futuro tengo que mejorar lo de las
notificaciones, lo de los tabs con eventos o el evento con los botones
flotantes, y pensar como ir metiendo lo de los grupos, para que la gente
pueda poner grupales, sera genial, adoro mi cabeza, hasta mañana <3

--- a/SpainCosplay3/app/src/main/res/values-es/strings.xml
+++ b/SpainCosplay3/app/src/main/res/values-es/strings.xml
@@ -17,4 +17,6 @@
     <string name="order">Fecha mas cercana</string>
     <string name="section_format">Estamos en pruebas, Seccion: %1$d</string>
     <string name="facebook_app_id">1051235838231573</string>
+    <string name="update">Actualización disponible</string>
+    <string name="update2">Visite la tienda para actualizar</string>
 </resources>
